--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap" rel="stylesheet">
     <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
+    <script src="acorn_interpreter.js"></script>
     <meta
       name="description"
       content="Web site created using create-react-app"
